Fixed merge Errors

--- a/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,8 +71,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,SkinCache=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,WidgetComponents=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,SkinCache=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=0,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,WidgetComponents=1",BufferVisualizationMode="",ExposureSettings=(LogOffset=0,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowStats=False,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Ad_Nauseum/Levels/Level_2
-MRUItem1=/Game/Ad_Nauseum/Levels/Level_1
+MRUItem0=/Game/Ad_Nauseum/Levels/Level_1
+MRUItem1=/Game/Ad_Nauseum/Levels/Level_2
 MRUItem2=/Game/Ad_Nauseum/MenuItems/MenuMap
 MRUItem3=/Game/Ad_Nauseum/Levels/Level_3
 MRUItem4=/Game/Ad_Nauseum/Levels/OverworldMap
@@ -92,7 +92,7 @@ Common=False
 User Created=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Blueprints/General
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -114,15 +114,13 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Ad_Nauseum/Levels/Level_2
+LastLevel=/Game/Ad_Nauseum/Levels/Level_1
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Ad_Nauseum/Levels/Level_2_TMap.Level_2_TMap
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomPatrol_Plasma.MushroomPatrol_Plasma
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/Weapons/BlueBullet.BlueBullet
 OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/General/Slimey.Slimey
-OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/General/Mini.Mini
-OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/General/Ad_Nauseum_Save.Ad_Nauseum_Save
-OpenAssetsAtExit=/Game/Ad_Nauseum/Levels/Level_1_TMap.Level_1_TMap
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1670,10 +1668,27 @@ REINST_Mini_C_157.Replication=True
 REINST_Mini_C_157.Input=True
 REINST_Mini_C_157.Actor=True
 Mini_C.Default=True
+MushroomPatrol_Plasma_C.Default=True
+MushroomPatrol_Plasma_C.Tick=True
+MushroomPatrol_Plasma_C.Rendering=True
+MushroomPatrol_Plasma_C.Replication=True
+MushroomPatrol_Plasma_C.Input=True
+MushroomPatrol_Plasma_C.Actor=True
+PlasmaPickup_C.Tick=True
+PlasmaPickup_C.Rendering=True
+PlasmaPickup_C.Replication=True
+PlasmaPickup_C.Input=True
+PlasmaPickup_C.Actor=True
+BlueBullet_C.Default=True
+BlueBullet_C.Tick=True
+BlueBullet_C.Rendering=True
+BlueBullet_C.Replication=True
+BlueBullet_C.Input=True
+BlueBullet_C.Actor=True
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" "
-Object=
+Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -1688,9 +1703,9 @@ REINST_Slimey_C_162="\"Object.Character.CharacterMovement.Object.NavMovement.Nav
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[5]\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PaperSpriteComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PaperSprite=
@@ -1766,6 +1781,8 @@ REINST_Slimey_C_283="\"Object.Character.CapsuleComponent.Object.Collision.BodyIn
 /Game/Ad_Nauseum/Levels/Level_2_TMap.Level_2_TMap=1
 /Game/Ad_Nauseum/Blueprints/General/MiniSlimey.MiniSlimey=0
 /Game/Ad_Nauseum/Blueprints/General/Mini.Mini=0
+/Game/Ad_Nauseum/Blueprints/General/PlasmaPickup.PlasmaPickup=0
+/Game/Ad_Nauseum/Blueprints/Weapons/BlueBullet.BlueBullet=0
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.Lightmass.Lightmaps,
@@ -1818,10 +1835,15 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.PGame,InputSettings.B
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.PGame,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Jump,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.ActionMappings,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.PGame,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Jump,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.ActionMappings,
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,
-PaperSpriteComponent=PaperSpriteComponent.Physics.ConstraintsGroup,PaperSpriteComponent.Rendering.TextureStreaming,PaperSpriteComponent.Rendering.LOD,
+PaperSpriteComponent=PaperSpriteComponent.Rendering.LOD,PaperSpriteComponent.Rendering.TextureStreaming,PaperSpriteComponent.Physics.ConstraintsGroup,
 CameraComponent=CameraComponent.PostProcess.AutoExposure,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomPatrol_Plasma.MushroomPatrol_Plasma;
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Moving_Platform2.Moving_Platform2;
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Moving_Platform.Moving_Platform;
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Falling_B.Falling_B;
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Breaking_Platform.Breaking_Platform;
 RecentlyPlaced=/Game/Ad_Nauseum/Levels/Level_2_TMap.Level_2_TMap;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomShooter.MushroomShooter;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomPatrol.MushroomPatrol;
@@ -1844,8 +1866,8 @@ PreviewHeight=720
 PreviewAspectRatio=16:9
 
 [RootWindow]
-ScreenPosition=X=431.000 Y=0.000
-WindowSize=X=1396.000 Y=758.000
+ScreenPosition=X=2207.000 Y=0.000
+WindowSize=X=937.000 Y=768.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
