Added more sprites

--- a/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -92,7 +92,7 @@ Common=False
 User Created=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Sprites
+ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Blueprints/Traps
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -118,7 +118,6 @@ LastLevel=/Game/Ad_Nauseum/Levels/Level_1
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/Weapons/BlueBullet.BlueBullet
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1683,6 +1682,17 @@ BlueBullet_C.Rendering=True
 BlueBullet_C.Replication=True
 BlueBullet_C.Input=True
 BlueBullet_C.Actor=True
+Falling_B_C.Tick=True
+Falling_B_C.Rendering=True
+Falling_B_C.Replication=True
+Falling_B_C.Input=True
+Falling_B_C.Actor=True
+Stalactite_C.Tick=True
+Stalactite_C.Rendering=True
+Stalactite_C.Replication=True
+Stalactite_C.Input=True
+Stalactite_C.Actor=True
+Stalactite_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" "
@@ -1782,6 +1792,19 @@ REINST_Slimey_C_283="\"Object.Character.CapsuleComponent.Object.Collision.BodyIn
 /Game/Ad_Nauseum/Blueprints/General/PlasmaPickup.PlasmaPickup=0
 /Game/Ad_Nauseum/Blueprints/Weapons/BlueBullet.BlueBullet=0
 /Game/Ad_Nauseum/Sprites/BlueBullet_Sprite.BlueBullet_Sprite=1
+/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomPatrol_Plasma.MushroomPatrol_Plasma=0
+/Game/Ad_Nauseum/Textures/health.health=1
+/Game/Ad_Nauseum/Sprites/Stone_Block_Sprite_2.Stone_Block_Sprite_2=1
+/Game/Ad_Nauseum/Sprites/Stone_Block_Sprite.Stone_Block_Sprite=1
+/Game/Ad_Nauseum/Blueprints/Traps/Falling_B.Falling_B=0
+/Game/Ad_Nauseum/Textures/Falling_Block.Falling_Block=1
+/Game/Ad_Nauseum/Blueprints/Traps/Spikes.Spikes=1
+/Game/Ad_Nauseum/Sprites/Falling_Block_Sprite.Falling_Block_Sprite=1
+/Game/Ad_Nauseum/Textures/Stone_Block.Stone_Block=1
+/Game/Ad_Nauseum/Sprites/Stalactite_Sprite2.Stalactite_Sprite2=1
+/Game/Ad_Nauseum/Textures/Stalactite.Stalactite=1
+/Game/Ad_Nauseum/Blueprints/Traps/Stalactite.Stalactite=0
+/Game/Ad_Nauseum/Sprites/Stalactite_Sprite.Stalactite_Sprite=0
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.Lightmass.Lightmaps,
@@ -1834,10 +1857,11 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.PGame,InputSettings.B
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.PGame,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Jump,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.ActionMappings,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.PGame,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Jump,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.ActionMappings,
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,
-PaperSpriteComponent=PaperSpriteComponent.Physics.ConstraintsGroup,PaperSpriteComponent.Rendering.TextureStreaming,PaperSpriteComponent.Rendering.LOD,
+PaperSpriteComponent=PaperSpriteComponent.Rendering.LOD,PaperSpriteComponent.Rendering.TextureStreaming,PaperSpriteComponent.Physics.ConstraintsGroup,
 CameraComponent=CameraComponent.PostProcess.AutoExposure,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Stalactite.Stalactite;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Breaking_Platform.Breaking_Platform;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomPatrol_Plasma.MushroomPatrol_Plasma;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Moving_Platform2.Moving_Platform2;
@@ -1857,7 +1881,6 @@ RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/MushroomShooter.MushroomShooter;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/GreenBullet.GreenBullet;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Spikes.Spikes;
 RecentlyPlaced=/Game/Ad_Nauseum/Sprites/Placeholder_Background_Sprite.Placeholder_Background_Sprite;
-RecentlyPlaced=/Game/Ad_Nauseum/Sprites/Grass_Block_Sprite.Grass_Block_Sprite;
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1866,7 +1889,7 @@ PreviewAspectRatio=16:9
 
 [RootWindow]
 ScreenPosition=X=839.000 Y=0.000
-WindowSize=X=947.000 Y=778.000
+WindowSize=X=957.000 Y=788.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1883,7 +1906,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/nlfosdic/New Repo/Ad_Nauseum_UE4/Ad_Nauseum/Content/Ad_Nauseum/Levels
+UNR=../../../../../../Users/nlfosdic/Ad_Nauseum_UE4/Ad_Nauseum/Content/Ad_Nauseum/Levels
 BRUSH=../../../../../../Users/jgagn_000/Documents/Unreal Projects/Ad_Nauseum/Content/
 FBX=../../../../../../Users/jgagn_000/Documents/Unreal Projects/Ad_Nauseum/Content/
 FBXAnim=../../../../../../Users/jgagn_000/Documents/Unreal Projects/Ad_Nauseum/Content/
@@ -2391,8 +2414,8 @@ BlueprintGraph.TimeStamp=2017.01.18-18.14.32
 BlueprintGraph.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2016.12.27-21.05.31
 SequencerWidgets.LastCompileMethod=Unknown
-TextureEditor.TimeStamp=2016.12.27-21.05.41
-TextureEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2017.01.18-17.36.58
+TextureEditor.LastCompileMethod=External
 LauncherServices.TimeStamp=2016.12.27-21.04.47
 LauncherServices.LastCompileMethod=Unknown
 PackageDependencyInfo.TimeStamp=2016.12.27-21.05.03
@@ -2405,6 +2428,7 @@ PortalProxies.LastCompileMethod=Unknown
 [DetailCategoriesAdvanced]
 InputSettings.Bindings=True
 IntProperty.Variable=False
+PaperSprite.Rendering=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
