Another attempt at slime enemy.

--- a/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -118,6 +118,8 @@ LastLevel=/Game/Ad_Nauseum/Levels/Level_1
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/BasicMobs/Slime.Slime
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomShooter.MushroomShooter
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1101,10 +1103,12 @@ Slime_C.Replication=True
 Slime_C.Input=True
 Slime_C.Actor=True
 Slime_C.TransformCommon=True
+MulticastDelegateProperty.Delegate=True
+MulticastDelegateProperty.DelegateInputs=True
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" \"Object.Sprite.KeyFrames.KeyFrames[1]\" "
-Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -1277,7 +1281,7 @@ PreviewAspectRatio=16:9
 
 [RootWindow]
 ScreenPosition=X=431.000 Y=0.000
-WindowSize=X=1436.000 Y=798.000
+WindowSize=X=1456.000 Y=818.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
