Boss mostly finished, needs to be merged

--- a/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -93,7 +93,7 @@ Common=False
 User Created=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Sprites
+ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Blueprints/BasicMobs
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -119,6 +119,8 @@ LastLevel=/Game/Ad_Nauseum/Levels/ZacsTestLevel
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomPatrol.MushroomPatrol
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomShooter.MushroomShooter
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1101,10 +1103,37 @@ CapsuleComponent.Events=True
 Actor.Warning=True
 MushroomBoss_C.TransformCommon=True
 MushroomBoss_C.Default=True
+MushroomBossv2_C.Tick=True
+MushroomBossv2_C.Rendering=True
+MushroomBossv2_C.Replication=True
+MushroomBossv2_C.Input=True
+MushroomBossv2_C.Actor=True
+MushroomBossv2_C.TransformCommon=True
+MushroomBossv2_C.Default=True
+K2Node_VariableSet.Events=True
+BossFloorTrigger_C.Tick=True
+BossFloorTrigger_C.Rendering=True
+BossFloorTrigger_C.Replication=True
+BossFloorTrigger_C.Input=True
+BossFloorTrigger_C.Actor=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+BossFloorTrigger_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" "
-Object=
+Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -1117,13 +1146,13 @@ REINST_Slimey_C_154="\"Object.Character.CharacterMovement.Object.NavMovement.Nav
 REINST_Slimey_C_158="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_Slimey_C_162="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[5]\" "
-BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PaperSpriteComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PaperSpriteComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PaperSprite=
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 Ad_Nauseum_Save_C=
@@ -1136,6 +1165,7 @@ REINST_Slimey_C_436="\"Object.Character.CharacterMovement.Object.NavMovement.Nav
 REINST_Slimey_C_448="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_Slimey_C_470="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Ad_Nauseum/Flipbooks/SlimeyIdle.SlimeyIdle=1
@@ -1196,6 +1226,9 @@ CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInsta
 /Game/2DSideScroller/Sprites/RunFrames/RunCycle_1.RunCycle_1=1
 /Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomBoss.MushroomBoss=1
 /Game/Ad_Nauseum/Sprites/Zacs_Mushroom_Boss.Zacs_Mushroom_Boss=1
+/Game/Ad_Nauseum/Sprites/Mushroom_Boss_v2.Mushroom_Boss_v2=1
+/Game/Ad_Nauseum/Blueprints/BasicMobs/BossFloorTrigger.BossFloorTrigger=1
+/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomBossv2.MushroomBossv2=1
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.Lightmass.Lightmaps,
@@ -1253,6 +1286,8 @@ CameraComponent=CameraComponent.PostProcess.AutoExposure,
 CapsuleComponent=CapsuleComponent.Collision.Collision,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/BossFloorTrigger.BossFloorTrigger;
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomBossv2.MushroomBossv2;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomBoss.MushroomBoss;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomShooter.MushroomShooter;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomPatrol.MushroomPatrol;
@@ -1275,8 +1310,8 @@ PreviewHeight=720
 PreviewAspectRatio=16:9
 
 [RootWindow]
-ScreenPosition=X=431.000 Y=0.000
-WindowSize=X=1376.000 Y=738.000
+ScreenPosition=X=53.000 Y=0.000
+WindowSize=X=924.000 Y=748.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1813,7 +1848,9 @@ BlueprintNativeCodeGen.LastCompileMethod=Unknown
 [DetailCategoriesAdvanced]
 InputSettings.Bindings=True
 IntProperty.Variable=False
-PaperSpriteComponent.Physics=True
+PaperSpriteComponent.Physics=False
+PaperSpriteComponent.Lighting=False
+ObjectProperty.Variable=False
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1838,7 +1875,7 @@ ChangeVariableType_Warning=False
 LastLogListing=PIE
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
