Finished snoman boss

--- a/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -94,7 +94,7 @@ Common=False
 User Created=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Blueprints/Weapons
+ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Blueprints/General
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -119,11 +119,10 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/Ad_Nauseum/Levels/ZacsTestLevel
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/BasicMobs/SnowmanBossMiddle.SnowmanBossMiddle
-OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/Weapons/RedBullet.RedBullet
-OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/Weapons/SnowmanCoalBomb.SnowmanCoalBomb
-OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/Weapons/Explosion.Explosion
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/BasicMobs/SnowmanBossBottom.SnowmanBossBottom
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/BasicMobs/SnomanBossHead.SnomanBossHead
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1184,10 +1183,17 @@ Explosion_C.Rendering=True
 Explosion_C.Replication=True
 Explosion_C.Input=True
 Explosion_C.Actor=True
+SnomanBossHead_C.Default=True
+SnomanBossHead_C.Tick=True
+SnomanBossHead_C.Rendering=True
+SnomanBossHead_C.Replication=True
+SnomanBossHead_C.Input=True
+SnomanBossHead_C.Actor=True
+SnomanBossHead_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" "
-Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -1202,11 +1208,11 @@ REINST_Slimey_C_162="\"Object.Character.CharacterMovement.Object.NavMovement.Nav
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[5]\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PaperSpriteComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PaperSpriteComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PaperSprite="\"Object.Collision.CollisionGeometry.Shapes.Shapes[0]\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 Ad_Nauseum_Save_C=
@@ -1294,9 +1300,12 @@ DeveloperSettings=
 /Game/Ad_Nauseum/Sprites/LeftFacingMiddleSnowball_Sprite.LeftFacingMiddleSnowball_Sprite=1
 /Game/Ad_Nauseum/Sprites/RightFacingMiddleSnowball_Sprite.RightFacingMiddleSnowball_Sprite=1
 /Game/Ad_Nauseum/Sprites/CoalBomb_Sprite.CoalBomb_Sprite=0
-/Game/Ad_Nauseum/Blueprints/Weapons/SnowmanCoalBomb.SnowmanCoalBomb=1
+/Game/Ad_Nauseum/Blueprints/Weapons/SnowmanCoalBomb.SnowmanCoalBomb=0
 /Game/Ad_Nauseum/Blueprints/Weapons/BombInterface.BombInterface=1
 /Game/Ad_Nauseum/Sprites/Explosion_Sprite.Explosion_Sprite=0
+/Game/Ad_Nauseum/Sprites/LeftFacingTopSnowball_Sprite.LeftFacingTopSnowball_Sprite=0
+/Game/Ad_Nauseum/Sprites/RightFacingTopSnowball_Sprite.RightFacingTopSnowball_Sprite=0
+/Game/Ad_Nauseum/Blueprints/Weapons/Explosion.Explosion=0
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.Lightmass.Lightmaps,
@@ -1349,11 +1358,12 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.PGame,InputSettings.B
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.PGame,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Jump,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.ActionMappings,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.PGame,InputSettings.Bindings.ActionMappings.NavWest,InputSettings.Bindings.ActionMappings.NavSouth,InputSettings.Bindings.ActionMappings.NavEast,InputSettings.Bindings.ActionMappings.NavNorth,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Jump,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.ActionMappings,
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,
-PaperSpriteComponent=PaperSpriteComponent.Collision.Collision,PaperSpriteComponent.Physics.ConstraintsGroup,PaperSpriteComponent.Rendering.TextureStreaming,PaperSpriteComponent.Rendering.LOD,
+PaperSpriteComponent=PaperSpriteComponent.Rendering.LOD,PaperSpriteComponent.Rendering.TextureStreaming,PaperSpriteComponent.Physics.ConstraintsGroup,PaperSpriteComponent.Collision.Collision,
 CameraComponent=CameraComponent.PostProcess.AutoExposure,
 CapsuleComponent=CapsuleComponent.Collision.Collision,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/SnomanBossHead.SnomanBossHead;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Weapons/SnowmanCoalBomb.SnowmanCoalBomb;
 RecentlyPlaced=/Game/Ad_Nauseum/Sprites/CoalBomb_Sprite.CoalBomb_Sprite;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/SnowmanBossMiddle.SnowmanBossMiddle;
@@ -1373,7 +1383,6 @@ RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Slimey.Slimey;
 RecentlyPlaced=/Game/Ad_Nauseum/MenuItems/Menu_Loader.Menu_Loader;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Map_Node.Map_Node;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Map_Pawn.Map_Pawn;
-RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/MushroomPatrol.MushroomPatrol;
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1382,8 +1391,8 @@ PreviewAspectRatio=16:9
 
 [RootWindow]
 ScreenPosition=X=773.000 Y=59.000
-WindowSize=X=964.000 Y=957.000
-InitiallyMaximized=True
+WindowSize=X=974.000 Y=967.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1948,7 +1957,7 @@ ChangeVariableType_Warning=False
 LastLogListing=PIE
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
