--- a/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Ad_Nauseum/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -20,7 +20,7 @@ MaterialQualityLevel=1
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowWidth=1600
 NewWindowHeight=900
-NewWindowPosition=(X=155,Y=53)
+NewWindowPosition=(X=-8,Y=-8)
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -94,7 +94,7 @@ Common=False
 User Created=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Blueprints/General
+ContentBrowserTab1.SelectedPaths=/Game/Ad_Nauseum/Blueprints/BasicMobs
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -119,10 +119,11 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/Ad_Nauseum/Levels/ZacsTestLevel
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/BasicMobs/SnowmanBossMiddle.SnowmanBossMiddle
-OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/BasicMobs/SnowmanBossBottom.SnowmanBossBottom
-OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/BasicMobs/SnomanBossHead.SnomanBossHead
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/BasicMobs/Justthebutt.Justthebutt
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/General/Slimey.Slimey
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/BasicMobs/YellowSlime.YellowSlime
+OpenAssetsAtExit=/Game/Ad_Nauseum/Blueprints/BasicMobs/RedSlime.RedSlime
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1190,27 +1191,74 @@ SnomanBossHead_C.Replication=True
 SnomanBossHead_C.Input=True
 SnomanBossHead_C.Actor=True
 SnomanBossHead_C.TransformCommon=True
+Falling_B_C.TransformCommon=True
+Falling_B_C.Rendering=True
+Falling_B_C.Input=True
+Falling_B_C.Actor=True
+Falling_B_C.Tick=True
+Falling_B_C.Replication=True
+RedSlime_C.Tick=True
+RedSlime_C.Rendering=True
+RedSlime_C.Replication=True
+RedSlime_C.Input=True
+RedSlime_C.Actor=True
+RedSlime_C.TransformCommon=True
+BlueSlime_C.Tick=True
+BlueSlime_C.Rendering=True
+BlueSlime_C.Replication=True
+BlueSlime_C.Input=True
+BlueSlime_C.Actor=True
+BlueSlime_C.TransformCommon=True
+YellowSlime_C.Tick=True
+YellowSlime_C.Rendering=True
+YellowSlime_C.Replication=True
+YellowSlime_C.Input=True
+YellowSlime_C.Actor=True
+YellowSlime_C.TransformCommon=True
+YellowSlime_C.Default=True
+Justthebutt_C.Tick=True
+Justthebutt_C.Rendering=True
+Justthebutt_C.Replication=True
+Justthebutt_C.Input=True
+Justthebutt_C.Actor=True
+PaperGroupedSpriteComponent.Warning=True
+PaperGroupedSpriteComponent.Variable=True
+PaperGroupedSpriteComponent.TransformCommon=True
+PaperGroupedSpriteComponent.Sprite=True
+PaperGroupedSpriteComponent.Sockets=True
+PaperGroupedSpriteComponent.Materials=True
+PaperGroupedSpriteComponent.Instances=True
+PaperGroupedSpriteComponent.Physics=True
+PaperGroupedSpriteComponent.Collision=True
+PaperGroupedSpriteComponent.Lighting=True
+PaperGroupedSpriteComponent.Rendering=True
+PaperGroupedSpriteComponent.Tags=True
+PaperGroupedSpriteComponent.ComponentReplication=True
+PaperGroupedSpriteComponent.Activation=True
+PaperGroupedSpriteComponent.Cooking=True
+PaperGroupedSpriteComponent.Events=True
+Justthebutt_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" "
-Object=
+Object="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-Slimey_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-PaperCharacter="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Character="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Pawn="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Slimey_C=
+PaperCharacter=
+Character=
+Pawn=
 REINST_Slimey_C_150="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_Slimey_C_154="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_Slimey_C_158="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_Slimey_C_162="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[5]\" "
-BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
+ActorComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 PaperSpriteComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PaperSprite="\"Object.Collision.CollisionGeometry.Shapes.Shapes[0]\" "
@@ -1229,6 +1277,7 @@ StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyIn
 PaperTileMapComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 LevelEditor2DSettings="\"Object.LayerSnapping.SnapLayers\" \"Object.LayerSnapping.SnapLayers.SnapLayers[0]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[1]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[2]\" "
 DeveloperSettings=
+PaperGroupedSpriteComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Ad_Nauseum/Flipbooks/SlimeyIdle.SlimeyIdle=1
@@ -1291,11 +1340,11 @@ DeveloperSettings=
 /Game/Ad_Nauseum/Sprites/Zacs_Mushroom_Boss.Zacs_Mushroom_Boss=1
 /Game/Ad_Nauseum/Sprites/Mushroom_Boss_v2.Mushroom_Boss_v2=1
 /Game/Ad_Nauseum/Blueprints/BasicMobs/BossFloorTrigger.BossFloorTrigger=1
-/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomBossv2.MushroomBossv2=1
-/Game/Ad_Nauseum/Levels/ZacsTestTilemap.ZacsTestTilemap=1
+/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomBossv2.MushroomBossv2=0
+/Game/Ad_Nauseum/Levels/ZacsTestTilemap.ZacsTestTilemap=0
 /Game/Ad_Nauseum/Sprites/BottomSnowball_Sprite.BottomSnowball_Sprite=1
 /Game/Ad_Nauseum/Blueprints/BasicMobs/SnowmanBoss.SnowmanBoss=1
-/Game/Ad_Nauseum/Blueprints/BasicMobs/SnowmanBossMiddle.SnowmanBossMiddle=1
+/Game/Ad_Nauseum/Blueprints/BasicMobs/SnowmanBossMiddle.SnowmanBossMiddle=0
 /Game/Ad_Nauseum/Blueprints/BasicMobs/SnowmanBossBottom.SnowmanBossBottom=0
 /Game/Ad_Nauseum/Sprites/LeftFacingMiddleSnowball_Sprite.LeftFacingMiddleSnowball_Sprite=1
 /Game/Ad_Nauseum/Sprites/RightFacingMiddleSnowball_Sprite.RightFacingMiddleSnowball_Sprite=1
@@ -1306,6 +1355,10 @@ DeveloperSettings=
 /Game/Ad_Nauseum/Sprites/LeftFacingTopSnowball_Sprite.LeftFacingTopSnowball_Sprite=0
 /Game/Ad_Nauseum/Sprites/RightFacingTopSnowball_Sprite.RightFacingTopSnowball_Sprite=0
 /Game/Ad_Nauseum/Blueprints/Weapons/Explosion.Explosion=0
+/Game/Ad_Nauseum/Blueprints/BasicMobs/SnomanBossHead.SnomanBossHead=0
+/Game/Ad_Nauseum/Blueprints/BasicMobs/RedSlime.RedSlime=0
+/Game/Ad_Nauseum/Blueprints/BasicMobs/BlueSlime.BlueSlime=0
+/Game/Ad_Nauseum/Blueprints/Traps/Falling_B.Falling_B=0
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.Lightmass.Lightmaps,
@@ -1363,26 +1416,26 @@ CameraComponent=CameraComponent.PostProcess.AutoExposure,
 CapsuleComponent=CapsuleComponent.Collision.Collision,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Ad_Nauseum/Sprites/Placeholder_Background_Sprite.Placeholder_Background_Sprite;
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/Justthebutt.Justthebutt;
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/SnowmanBossBottom.SnowmanBossBottom;
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/YellowSlime.YellowSlime;
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/BlueSlime.BlueSlime;
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/RedSlime.RedSlime;
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Traps/Falling_B.Falling_B;
+RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomBossv2.MushroomBossv2;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/SnomanBossHead.SnomanBossHead;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Weapons/SnowmanCoalBomb.SnowmanCoalBomb;
 RecentlyPlaced=/Game/Ad_Nauseum/Sprites/CoalBomb_Sprite.CoalBomb_Sprite;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/SnowmanBossMiddle.SnowmanBossMiddle;
-RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/SnowmanBossBottom.SnowmanBossBottom;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/BossFloorTrigger.BossFloorTrigger;
 RecentlyPlaced=/Game/Ad_Nauseum/Sprites/BottomSnowball_Sprite.BottomSnowball_Sprite;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/General/Slimey.Slimey;
 RecentlyPlaced=/Game/Ad_Nauseum/Levels/ZacsTestTilemap.ZacsTestTilemap;
-RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomBossv2.MushroomBossv2;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomBoss.MushroomBoss;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomShooter.MushroomShooter;
 RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/BasicMobs/MushroomPatrol.MushroomPatrol;
-RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
-RecentlyPlaced=/Game/Ad_Nauseum/Textures/Level_1_TMap.Level_1_TMap;
-RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Slimey.Slimey;
-RecentlyPlaced=/Game/Ad_Nauseum/MenuItems/Menu_Loader.Menu_Loader;
-RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Map_Node.Map_Node;
-RecentlyPlaced=/Game/Ad_Nauseum/Blueprints/Map_Pawn.Map_Pawn;
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1390,9 +1443,9 @@ PreviewHeight=720
 PreviewAspectRatio=16:9
 
 [RootWindow]
-ScreenPosition=X=773.000 Y=59.000
-WindowSize=X=974.000 Y=967.000
-InitiallyMaximized=False
+ScreenPosition=X=772.000 Y=63.000
+WindowSize=X=984.000 Y=977.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
